# Sedna

./: meson.build  sedna-test.desktop.in
src/: main.c  sedna-cfg.c  sedna-cfg.h  sedna-com.c  sedna-com.h  sedna-def.c  sedna-def.h  sedna-linux.c  sedna-linux.h  sedna-obj.c  sedna-obj.h  sedna-ram.c  sedna-ram.h  sedna-ver.h  sedna.h
